# secure-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  dashboard_final.html  index.html
keys/: public.pem
src/: main.rs  tests.rs
src/db/: mod.rs
src/middleware/: anomaly.rs  auth.rs  headers.rs  ip_ban.rs  mod.rs  rate_limiter.rs  response_inspector.rs
src/models/: mod.rs  user.rs
src/routes/: api_keys.rs  auth.rs  mod.rs
src/utils/: encryption.rs  jwt.rs  mod.rs  password.rs  sanitize.rs
static/: index.html
tests/: fuzz_tests.rs  integration_tests.rs
